Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7429

sanity-lfsck test_23c: @@@@@@ FAIL: (8) unexpected size

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • Lustre 2.8.0, Lustre 2.9.0, Lustre 2.10.0
    • 3
    • 9223372036854775807

      Configuration : 4 node setup 1 MDS, 1 OSS, 2 patchless Clients
      Release
      2.6.32_431.29.2.el6.x86_64
      2.6.32_431.29.2.el6.x86_64

      Server 2.7.62
      Client 2.7.62

      git hash 049252c

      stdout.log
      == sanity-lfsck test 23c: LFSCK can repair dangling name entry (3) == 02:09:55 (1446948595)
      #####
      The objectA has multiple hard links, one of them corresponding
      to the name entry_B. But there is something wrong for the name
      entry_B and cause entry_B to references non-exist object_C.
      In the first-stage scanning, the LFSCK will think the entry_B
      as dangling, and re-create the lost object_C. And then others
      modified the re-created object_C. When the LFSCK comes to the
      second-stage scanning, it will find that the former re-creating
      object_C maybe wrong and try to replace the object_C with the
      real object_A. But because object_C has been modified, so the
      LFSCK cannot replace it.
      #####
      Inject failure stub on MDT0 to simulate dangling name entry
      fail_loc=0x1621
      fail_loc=0
      'ls' should fail because of dangling name entry
      fail_val=10
      fail_loc=0x1602
      Trigger namespace LFSCK to find out dangling name entry
      Started LFSCK on the device lustre-MDT0000: scrub namespace
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      Waiting 32 secs for update
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      Waiting 22 secs for update
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      Waiting 12 secs for update
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      Waiting 2 secs for update
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/d0/foo': No such file or directory
      Update not seen after 32s: wanted '0' got ''
      stat: cannot stat `/mnt/lustre/d23c.sanity-lfsck/guard': No such file or directory
      name: lfsck_namespace
      magic: 0xa0621a0b
      version: 2
      status: scanning-phase2
      flags: scanned-once,inconsistent
      param: create_mdtobj
      last_completed_time: N/A
      time_since_last_completed: N/A
      latest_start_time: 1446948595
      time_since_latest_start: 33 seconds
      last_checkpoint_time: 1446948595
      time_since_last_checkpoint: 33 seconds
      latest_start_position: 12, N/A, N/A
      last_checkpoint_position: 25037, N/A, N/A
      first_failure_position: N/A, N/A, N/A
      checked_phase1: 8
      checked_phase2: 0
      updated_phase1: 1
      updated_phase2: 0
      failed_phase1: 0
      failed_phase2: 0
      directories: 4
      dirent_repaired: 2
      linkea_repaired: 0
      nlinks_repaired: 0
      multiple_linked_checked: 1
      multiple_linked_repaired: 0
      unknown_inconsistency: 0
      unmatched_pairs_repaired: 0
      dangling_repaired: 0
      multiple_referenced_repaired: 0
      bad_file_type_repaired: 0
      lost_dirent_repaired: 0
      local_lost_found_scanned: 0
      local_lost_found_moved: 0
      local_lost_found_skipped: 0
      local_lost_found_failed: 0
      striped_dirs_scanned: 0
      striped_dirs_repaired: 0
      striped_dirs_failed: 0
      striped_dirs_disabled: 0
      striped_dirs_skipped: 0
      striped_shards_scanned: 0
      striped_shards_repaired: 0
      striped_shards_failed: 0
      striped_shards_skipped: 0
      name_hash_repaired: 0
      success_count: 0
      run_time_phase1: 0 seconds
      run_time_phase2: 9 seconds
      average_speed_phase1: 8 items/sec
      average_speed_phase2: 0 objs/sec
      average_speed_total: 0 items/sec
      real_time_speed_phase1: N/A
      real_time_speed_phase2: 0 objs/sec
      current_position: [0x0:0x0:0x0]
       sanity-lfsck test_23c: @@@@@@ FAIL: (8) unexpected size 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:4812:error_noexit()
        = /usr/lib64/lustre/tests/test-framework.sh:4843:error()
        = /usr/lib64/lustre/tests/sanity-lfsck.sh:3114:test_23c()
        = /usr/lib64/lustre/tests/test-framework.sh:5090:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:5127:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:4944:run_test()
        = /usr/lib64/lustre/tests/sanity-lfsck.sh:3137:main()
      Dumping lctl log to /tmp/test_logs/1446948549/sanity-lfsck.test_23c.*.1446948628.log
      FAIL 23c (34s)
      
      
      
      stderr.log
      pdsh@fre0203: fre0201: ssh exited with exit code 1
      pdsh@fre0203: fre0202: ssh exited with exit code 1
      Using TIMEOUT=20
      excepting tests: 
      
      
      
      

      Seagate-Bug-Id: MRP-3134

            yong.fan nasf (Inactive)
            parinay parinay v kondekar (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: